test/corpus/L1/negative/unexpected-token-extra-expr.st
"---
kind: negative
section: error.unexpected-token
codes: E_UNEXPECTED_TOKEN
note: two consecutive expressions without a separator — second integer is unexpected
---"
1 2
